// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextLink should render with chevron props 1`] = `
<a
  className="TextLink__link"
>
  Google
  <ChevronIcon
    className="TextLink__chevronRightSide"
    direction="up"
    size="hero"
  />
</a>
`;

exports[`TextLink should render with children 1`] = `
<a
  className="TextLink__link"
>
  Google
</a>
`;

exports[`TextLink should render with className 1`] = `
<a
  className="TextLink__link foo"
/>
`;

exports[`TextLink should render with defaults 1`] = `
<a
  className="TextLink__link"
/>
`;

exports[`TextLink should render with down chevron 1`] = `
<a
  className="TextLink__link"
>
  Google
  <ChevronIcon
    className="TextLink__chevronRightSide"
    direction="down"
    size="standard"
  />
</a>
`;

exports[`TextLink should render with left chevron 1`] = `
<a
  className="TextLink__link"
>
  <ChevronIcon
    className="TextLink__chevronLeftSide"
    direction="left"
    size="standard"
  />
  Google
</a>
`;

exports[`TextLink should render with right chevron 1`] = `
<a
  className="TextLink__link"
>
  Google
  <ChevronIcon
    className="TextLink__chevronRightSide"
    direction="right"
    size="standard"
  />
</a>
`;

exports[`TextLink should render with up chevron 1`] = `
<a
  className="TextLink__link"
>
  Google
  <ChevronIcon
    className="TextLink__chevronRightSide"
    direction="up"
    size="standard"
  />
</a>
`;
